# serverless_auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/authorizer_lambda/: config.py  main.py  models.py  policy.py  util.py  verify_cognito_token.py
tests/: test_handler.py  test_policy.py  test_util.py  test_verify_cognito_jwt.py
tests/data/: authorization_request.json
